--- a/responsive css/mobileresponsive.css
+++ b/responsive css/mobileresponsive.css
@@ -11,6 +11,15 @@
     h2 {
         font-size: 3rem;
     }
+
+    h3.service-heading {
+        font-size: 1rem;
+    }
+
+    /*=========================== services=========================== */
+    .services.wrapper {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
 @media (min-width: 576px) and (max-width:992px) {
